--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muflix🍿</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <form id="form">
+
+            <input type="text" class="search" placeholder="search">
+        </form>
+    </header>
+
+    <main id="main">
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2luZW1hfGVufDB8fDB8fHww"
+                alt="">
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+
+            <div class="overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut sed laudantium laboriosam harum ullam unde
+                vero pariatur incidunt quasi necessitatibus!
+            </div>
+        </div>
+    </main>
+
 
     <script src="script.js"></script>
 </body>
+
 </html>
