get movies, search movies on the console

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <form id="form">
 
-            <input type="text" class="search" placeholder="search">
+            <input type="text" class="search" id="search" placeholder="search">
         </form>
     </header>
 
